# dave

examples/dave_demo_launch/launch/: dave_lanturn.launch
examples/dave_nodes/launch/: lanturn_thrusterop.launch  wailord_thrusterop.launch
examples/dave_nodes/src/: lanturn_joy_thrusterop.py  lanturn_joy_thrusterop.py.bak  lanturn_joy_thrusterop.py.bak2  lanturn_thrusterop.py  wailord_thrusterop.py
examples/dave_robot_launch/launch/: lanturn.launch  lanturn.launch.bak  wailord.launch
lanturn/: lanturn_network.txt
lanturn/lanturn_description/: CMakeLists.txt  package.xml
lanturn/lanturn_description/launch/: lanturn_upload.launch  upload_lanturn.launch
lanturn/lanturn_description/robots/: lanturn.xacro  lanturn_default.xacro
lanturn/lanturn_description/urdf/: lanturn.gazebo.xacro  lanturn_actuators.xacro  lanturn_base.xacro  lanturn_gazebo.xacro  lanturn_sensors.xacro  lanturn_snippets.xacro  rexrov_base.xacro
lanturn/lanturn_launch/: package.xml
lanturn/lanturn_launch/launch/: dave_lanturn.launch
urdf/robots/lanturn_description/: CMakeLists.txt  package.xml
urdf/robots/lanturn_description/launch/: upload_lanturn.launch  upload_lanturn_.launch
urdf/robots/lanturn_description/meshes/: t200_prop.dae
urdf/robots/lanturn_description/urdf/: lanturn.xacro  lanturn.xacro.bak  lanturn.xacro.bak3  lanturn_actuators.xacro  lanturn_base.xacro  lanturn_sensors.xacro
urdf/robots/wailord_description/: CMakeLists.txt  package.xml
urdf/robots/wailord_description/launch/: upload_wailord.launch
urdf/robots/wailord_description/urdf/: wailord.xacro
